<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<SwitchPreference
            android:key="pref_allowRotation"
            android:title="@string/allow_rotation_title"
            android:defaultValue="@bool/allow_rotation"
			android:summary="@string/rotation_desc"
            android:persistent="true"/>-->
	<Preference
		android:key="uninstall"
		android:title="@string/uninstall"
		android:summary="@string/uninstall_desc"/>
	<com.moe.icelauncher.preference.SeekBarPreference
		android:key="colnums"
		android:title="@string/icon_colnums"
		android:min="3"
		app:max="6"
		android:defaultValue="4"/>
	<SwitchPreference
		android:key="preview_table"
		android:title="@string/preview_table"
		android:summary="@string/table_helper"
		android:persistent="true"/>
</PreferenceScreen>
